# Messplatine-SmartRollerz

./: README.md
common/: CMakeLists.txt  README.md
common/include/common/: common.hpp  logger.hpp  task.hpp
common/include/common/drivers/: drivers.hpp  gpio.hpp  i2c.hpp  pwm.hpp  servo.hpp  uart.hpp
common/include/common/units/: angle.hpp  data.hpp  frequency.hpp  quantity.hpp  time.hpp  units.hpp
common/include/common/utility/: buffer.hpp  enum.hpp  format.hpp  layout.hpp  mutex.hpp  protected_variable.hpp  result.hpp  string_literal.hpp  type.hpp  utility.hpp
common/src/: task.cpp
common/src/drivers/: gpio.cpp  i2c.cpp  pwm.cpp  servo.cpp  uart.cpp
common/src/utility/: format.cpp  mutex.cpp
embedded_remote_control/: CMakeLists.txt  platformio.ini
embedded_remote_control/include/: ADC128D818.hpp  INA236.hpp  ds18b20.h  globals_freertos.hpp  gpio_interrupt.hpp  onewire.h  remote_controller.hpp  tasks.hpp
embedded_remote_control/src/: ADC128D818.cpp  INA236.cpp  ds18b20.cpp  gpio_interrupt.cpp  main.cpp  onewire.cpp  remote_controller.cpp  tasks.cpp
